@@ -15,7 +15,7 @@ provides:
     file: lib/Net/FullAuto/FA_Core.pm
   Net::FullAuto:
     file: lib/Net/FullAuto.pm
-    version: 0.99999934
+    version: 0.99999935
   Net::FullAuto::FA_Core:
     file: lib/Net/FullAuto/FA_Core.pm
   Net::FullAuto::FA_DB:
@@ -68,8 +68,9 @@ requires:
   Cache::Cache: 0
   CHI: 0
   ExtUtils::MakeMaker: 6.59
+  ExtUtils::CBuilder: 0
   PPI: 0
   YAML: 0
 resources:
   license: http://opensource.org/licenses/gpl-3.0.html
-version: 0.99999934
+version: 0.99999935
