@@ -34,6 +34,7 @@
             "Digest::MD5" : 0,
             "Digest::SHA" : 0,
             "Email::Sender" : 0,
+            "ExtUtils::CBuilder" : 0,
             "ExtUtils::Depends" : 0,
             "ExtUtils::MakeMaker" : "6.59",
             "HTTP::Date" : 0,
@@ -69,7 +70,7 @@
       },
       "Net::FullAuto" : {
          "file" : "lib/Net/FullAuto.pm",
-         "version" : "0.99999934"
+         "version" : "0.99999935"
       },
       "Net::FullAuto::FA_Core" : {
          "file" : "lib/Net/FullAuto/FA_Core.pm",
@@ -118,5 +119,5 @@
          "http://opensource.org/licenses/gpl-3.0.html"
       ]
    },
-   "version" : "0.99999934"
+   "version" : "0.99999935"
 }
