@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 d839b8782c55f75e31c698a91ad7d56300b92279 ChangeLog
+SHA1 c4a9b0790795a96c2669eadec59920430fb53031 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 ab97f595e97f14248b1a91bec1d2cc5f5e3ed083 META.yml
-SHA1 d309c5c18d0056c5771ad647038bfbe57a4acdfb MYMETA.json
-SHA1 fb078886ebade4e43359a6fa392b0f1bda42fda0 MYMETA.yml
-SHA1 5b7919ed6d889d7a4a63098017dcf77cb934890c Makefile.PL
+SHA1 13335b8d33ebe10abc86be9bbb675c28d7ba9d2e META.yml
+SHA1 82009dc42a6af8a2948b0ff96a4e0acb9c64cc14 MYMETA.json
+SHA1 8b6aa9de531f9d9d59e35d0267547b303be5bed0 MYMETA.yml
+SHA1 bfd7b77505e5c85694603b420d5b39aa9687cfaf Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 26ab05febbdab79359953d086b447397c1719b5c bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 db503e09bc973c7017878ad2a08fb4db37b83ef6 lib/Net/FullAuto.pm
+SHA1 c877610fce12aa8c00227ef4164b5bc4b50d429a lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -50,17 +50,17 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 a8797cf51ff60405d04c8c674dd38eb76ff589fa lib/Net/FullAuto/FA_Core.pm
+SHA1 4a590de6e36bf575f58923081e8035d88faa261b lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSgCxOAAoJEBa/9Pad787Ejp4IAIS6dxzC8Vc0guGOaxq+LX4b
-pnP7kn2EyiuFgAyPLvBYYLgP0W/isFSbV2mjZewMnIiDvFNRxm9SJ432SjgtY5Hm
-kOCN/8ngrM0iSbzG7VzEtRb6wPIhavRi8Q5iuTYWgbn7/Qyd7iENBC7LwFASmRgz
-RUw13QA87ZyzLRqFv9eHKsYo98i109uP3tQ+AR5lMLy9Op5Z1aHOhMuuVe3QJKYB
-KRTLAP6VZEwQJhKZOEBB2liPaGwkVmwGf9haNTuwESZrgYq+vlHeZjtNLyKclS7d
-Uq+rtEDtbnL7bYSoFYeKusqhTVx/1SKVC+YPPR+ry37ruaDhlbiLqmMmpQo+vVM=
-=0jQo
+iQEcBAEBAgAGBQJSiEOvAAoJEBa/9Pad787EuGcH/0tlhNVxKHyg/HeWta6RcU13
+tOuXVi7nxZeIxk0J/mDoLtOwTgP50ji86C7iMAxXNx7AWfi9GFaTKhIiY/atgnkb
+SOXjql8PH6wh1vOtcK6fP/KBCasmOYE0W5ha/iIIbK4CQA0PVULTU/vyoBIHaWZE
+CrkcAHJyr/t6h47Udu6fAeVn03vM5msocJ3SPZJo4er5DGzN0WHMQTyRsljsObOX
+s7oH8XEpfN+GqTJbUffUCvkS4yVqQJ+/tgRW8DVjTvU0TVs3eaJDUcKNofoBG1AS
+CfvVS3HVNdgMbqI1jS/nd24nhCe+Z3IseQsYnglLyAIj8kbEStrsZZd1kQ6ckxs=
+=UHrT
 -----END PGP SIGNATURE-----
