@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999934';
+our $VERSION='0.99999935';
 
 
 use 5.005;
